--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,11 +1,4 @@
-.position {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    z-index: 9999;
-    max-width: 400px;
-}
+.position { position: fixed; display: flex; flex-direction: column; gap: 10px; z-index: 9999; max-width: 400px;}
 
 .top-right    { top: 60px; right: 30px; align-items: flex-end; }
 .top-left     { top: 60px; left: 30px; align-items: flex-start; }
@@ -47,15 +40,16 @@
 
 .notification .icon {
     flex-shrink: 0;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: visible;
-    padding: 2px;
-    background-color: #141517;
+    background: rgba(255, 255, 255, 0.03);
+    border: 1px solid rgba(255,255,255,0.1);
+    box-shadow: inset 0 0 10px rgba(255,255,255,0.05);
+    padding: 3px;
 }
 
 .notification.success .icon { background-color: #2ecc71; }
@@ -104,9 +98,7 @@
     100% { color: red; }
 }
 
-.color-rainbow {
-  animation: rainbow 3s linear infinite;
-}
+.color-rainbow { animation: rainbow 3s linear infinite; }
 
 strong { font-weight: bold; }
 em { font-style: italic; }
@@ -114,55 +106,13 @@ del { text-decoration: line-through; }
 code { font-family: monospace; }
 
 
-.notification .icon i {
-    font-size: 16px;
-    color: var(--icon-color, #fff);
-    display: block;
-    line-height: 1;
-    transform-origin: center center;
-}
-
-.notification .text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 10px;
-}
-
-.notification .text p {
-    margin: 0;
-    font-size: 12px;
-    color: #ccc;
-}
-
-.notification .text strong {
-    font-weight: bold;
-    color: inherit;
-    font-size: inherit;
-}
-
-.notification .text em {
-    font-style: italic;
-    color: inherit;
-    font-size: inherit;
-}
-
-.notification .text del {
-    text-decoration: line-through;
-    color: #999;
-    font-size: inherit;
-}
-
-.notification .text code {
-    background: rgba(255, 255, 255, 0.05);
-    font-family: monospace;
-    padding: 1px 4px;
-    border-radius: 3px;
-    color: #ddd;
-    font-size: 11px;
-}
-
-/* Slide ind animationer */
+.notification .icon i { font-size: 18px; color: var(--icon-color, #fff); display: block; line-height: 1; transform-origin: center center; }
+.notification .text { display: flex; flex-direction: column; justify-content: center; margin-left: 10px; }
+.notification .text p { margin: 0; font-size: 12px; color: #ccc; }
+.notification .text strong { font-weight: bold; color: inherit; font-size: inherit;}
+.notification .text em { font-style: italic; color: inherit; font-size: inherit; }
+.notification .text del { text-decoration: line-through; color: #999; font-size: inherit; }
+.notification .text code { background: rgba(255, 255, 255, 0.05); font-family: monospace; padding: 1px 4px; border-radius: 3px; color: #ddd; font-size: 11px; }
 
 @keyframes slideInTop {
     from { transform: translateY(-100%); }
@@ -204,29 +154,11 @@ code { font-family: monospace; }
     to { opacity: 0; transform: translateX(100%); }
 }
 
-.fadeOut {
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-}
-
-.fadeOutTop {
-    animation: slideOutTop 1s ease-in-out forwards;
-}
-
-.fadeOutBottom {
-    animation: slideOutBottom 1s ease-in-out forwards;
-}
-
-.fadeOutLeft {
-    animation: slideOutLeft 1s ease-in-out forwards;
-}
-
-.fadeOutRight {
-    animation: slideOutRight 1s ease-in-out forwards;
-}
-
-/* Icon animationer*/
+.fadeOut { animation-duration: 1s; animation-timing-function: ease-in-out; animation-fill-mode: forwards; }
+.fadeOutTop { animation: slideOutTop 1s ease-in-out forwards; }
+.fadeOutBottom { animation: slideOutBottom 1s ease-in-out forwards; }
+.fadeOutLeft { animation: slideOutLeft 1s ease-in-out forwards; }
+.fadeOutRight {animation: slideOutRight 1s ease-in-out forwards; }
 
 @keyframes fade {
     0% { opacity: 0; transform: scale(1); }
@@ -271,12 +203,5 @@ code { font-family: monospace; }
     to   { transform: rotate(360deg); }
 }
 
-.notification .icon.float i {
-    animation: float 8s ease-in-out infinite;
-    transform-origin: center;
-}
-
-.notification .icon.spin i {
-    animation: spin 1s linear infinite;
-    transform-origin: center;
-}
+.notification .icon.float i { animation: float 8s ease-in-out infinite; transform-origin: center; }
+.notification .icon.spin i { animation: spin 1s linear infinite; transform-origin: center; }
